# extreme-field-qed-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-and-sweep.yml
configs/: experiments.yaml  sweeps.yaml  test_mini_sweep.yaml  test_quick.yaml
docs/: BackReactionGuide.md  DiscoveryEngineGuide.md  IMPLEMENTATION_NOTES.md  PROVENANCE.md  anomalous_coupling.md  quickstart.md
docs/archive/: DEVELOPMENT_SUMMARY.md
examples/: gravitational_coupling_demo.py  interfering_results.json
examples/configs/: interfering_pulses.json  plasma_ring.json  sweep_gaussian_beam.json  sweep_multi_source.json
experiments/: counterpropagating_pulses.yaml  cw_cavity_quadrupole.yaml  rotating_capacitor.yaml
notebooks/: experiment_analysis.ipynb
scripts/: add_snr_to_sweep.py  anomaly_scanner.py  bayesian_analysis.py  check_copilot_usage.py  run_experiments.py  run_sweep.py  simulate_birefringence.py  simulate_gravity_coupling.py  simulate_pair_production.py
src/efqs/: __init__.py  anomalous_coupling.py  bayesian_inference.py  cli_utils.py  coherence_gravity_efqs_integration.py  constants.py  detector_noise.py  em_sources.py  gravitational_coupling.py  heisenberg_euler.py  metrics.py  pair_production.py  plotting.py  sensitivity.py  source_geometries.py  vacuum_birefringence.py
tests/: test_anomalous_coupling.py  test_ci_equivalent.py  test_detector_noise.py  test_gravitational_coupling.py  test_heisenberg_euler.py  test_metrics.py  test_scripts.py  test_tt_projection.py
